examples/test/testpolicy18849.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18849
  namespace: namespace467
spec:
  podSelector:
    matchLabels:
      key47: value35
      key29: value1
      key42: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value34
          key14: value22
          key1: value23
